Replace remaining deprecated Class.newInstance() calls
Follow-on to the #1698 adoption: the four remaining production/test sites still
using the deprecated Class.newInstance() now use
getDeclaredConstructor().newInstance(), matching the change already made in
SamRecordTrackingBuffer.

Class.newInstance() is discouraged because it silently propagates any checked
exception thrown by the no-arg constructor without declaring it, defeating
compile-time checking. The replacement wraps such exceptions in
InvocationTargetException. Where call sites caught the two specific checked
exceptions (InstantiationException/IllegalAccessException), the catch is
broadened to their common superclass ReflectiveOperationException so the two
additional checked exceptions from getDeclaredConstructor() are handled
uniformly.

No behavioral change: every affected site already wrapped or propagated
failures; the exercised classes all have accessible no-arg constructors.